<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/top_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <!-- The LinearLayout now has an ID so the TextView can be constrained to it -->
            <LinearLayout
                android:id="@+id/top_bar_actions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/create_post_desc"
                    android:focusable="true"
                    android:src="@drawable/ic_add"
                    app:tint="?android:attr/textColorPrimary" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/messages_desc"
                    android:focusable="true"
                    android:src="@drawable/ic_send"
                    app:tint="?android:attr/textColorPrimary" />
            </LinearLayout>

            <!-- This TextView is now constrained to stay to the start of the actions layout -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/top_bar_actions"
                android:ellipsize="end"
                android:fontFamily="@font/rubikglitchregular"
                android:maxLines="1"
                android:text="@string/newsapp"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="32sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/top_bar"
            android:background="?android:attr/listDivider"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/top_bar_container">

        <!-- The LinearLayout wrapper has been removed as it's no longer needed -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/post_item" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/colorBackground"
        app:itemIconTint="?android:attr/textColorPrimary"
        app:itemTextColor="?android:attr/textColorPrimary"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>

